[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/ui/button/BttnConfiguracion.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnConfiguracionPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelLimestone.png" type="Texture" id=3]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=4]
[ext_resource path="res://assets/art/ui/button/BttnRegresar.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/button/BttnRegresarPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/button/BttnCreateGame.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/panel/PanelWood.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/button/BttnCreateGamePressed.png" type="Texture" id=9]
[ext_resource path="res://src/UserInterface/Menus/ConfigureGame.gd" type="Script" id=10]

[node name="ConfigureGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -269.0
margin_right = 462.0
margin_bottom = 269.0
texture = ExtResource( 3 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -388.0
margin_top = 40.0
margin_right = 388.0
margin_bottom = 75.0
theme = ExtResource( 4 )
text = "Configuraci√≥n de partida"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.5
margin_top = -178.0
margin_right = 399.5
margin_bottom = 146.0
texture = ExtResource( 8 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.5
margin_top = -139.0
margin_right = 347.5
margin_bottom = 139.0
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -104.0
margin_right = 388.0
margin_bottom = -40.0
alignment = 1

[node name="BttnRegresar" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_right = 256.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="BttnCreateGame" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )

[node name="BttnConfiguracion" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[connection signal="pressed" from="NinePatchRect/Buttons/BttnRegresar" to="." method="_on_BttnRegresar_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnCreateGame" to="." method="_on_BttnCreateGame_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnConfiguracion" to="." method="_on_BttnConfiguracion_pressed"]
